# 6502-Assembler-Emulator

./: .gitignore  CMake-build  CMakeLists.txt
Assembler/: CMakeLists.txt  assembler.cpp  assembler.h  data.asm  defines.h  definitions.h  main.cpp  opcode_manager.cpp  opcode_manager.h  opcodes.cpp  opcodes.h  opcodestable.tsv
Emulator/: CMakeLists.txt  definitions.h  main.cpp  processor_state.cpp  processor_state.h
Shared/: CMakeLists.txt  primitives.cpp  primitives.h  rang.hpp  stdafx.cpp  stdafx.h
